--- a/style.css
+++ b/style.css
@@ -11,3 +11,80 @@
 .logo{
     margin-left: 42%;
 }
+.homeheading{
+    text-align: center;
+    margin-bottom: 50px;
+    margin-top: 20px;
+}
+h3{
+    text-align: center;
+}
+.loginForm{
+    background-color: burlywood;
+    color: black;
+    height: 40%;
+    width: 30%;
+    padding: 30px;
+    margin-left: 30%;
+    border-radius: 10px;
+}
+.labelLogin{
+    margin-right: 5px;
+    margin-top: 15px;
+    font-size: large;
+    font-weight: bold;
+}
+input{
+    border-radius: 20px;
+    border: none;
+    padding-left: 30px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+button{
+    margin-top: 20px;
+    margin-left: 35%;
+}
+.btn{
+    font-weight: bold;
+    border: 1px solid black;
+}
+.btn:hover{
+    background-color: black;
+    color: white;
+}
+/*nav logo*/
+.navLogo{
+    height: 80px;
+    margin-top: 5px;
+}
+
+/*footer*/
+.footer {
+    background-color: #333;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    font-family: Arial, sans-serif;
+    margin-top: 30px;
+}
+  
+.footer-body p {
+    margin: 0;
+    font-size: 14px;
+}
+  
+.socialLinks {
+    margin-top: 10px;
+}
+  
+.socialIcon {
+    color: white;
+    margin: 0 15px;
+    text-decoration: none;
+    font-size: 20px;
+}
+  
+.socialIcon:hover {
+    color: #f1f1f1;
+}
