--- a/style.css
+++ b/style.css
@@ -18,14 +18,16 @@
 }
 h3{
     text-align: center;
+    font-size: 40px;
+    margin-bottom: 40px;
 }
 .loginForm{
-    background-color: burlywood;
+    background-color: #C8A77D;
     color: black;
-    height: 40%;
-    width: 30%;
+    height: 50%;
+    width: 35%;
     padding: 30px;
-    margin-left: 30%;
+    margin-left: 33%;
     border-radius: 10px;
 }
 .labelLogin{
@@ -35,13 +37,21 @@ h3{
     font-weight: bold;
 }
 input{
-    border-radius: 20px;
+    width: 100%;
+    max-width: 300px;
+    height: 40px;
     border: none;
-    padding-left: 30px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    box-sizing: border-box;
+}
+#password{
+    margin-left: 5px;
 }
 button{
+    width: 120px;
     margin-top: 20px;
     margin-left: 35%;
 }
@@ -61,7 +71,7 @@ button{
 
 /*footer*/
 .footer {
-    background-color: #333;
+    background-color: #002147;
     color: white;
     padding: 20px;
     text-align: center;
